@@ -28,7 +28,7 @@ BEGIN
       VALUE "OriginalFilename",		"libfcache.dll\0"
       VALUE "ProductName",		"libfcache\0"
       VALUE "ProductVersion",		"@VERSION@" "\0"
-      VALUE "Comments",			"For more information visit http://code.google.com/p/libfcache/\0"
+      VALUE "Comments",			"For more information visit https://github.com/libyal/libfcache/\0"
     END
   END
   BLOCK "VarFileInfo"
