@@ -69,7 +69,7 @@ None
 .Sh NOTES
 .Sh BUGS
 Please report bugs of any kind to <joachim.metz@gmail.com> or on the project website:
-http://code.google.com/p/libfcache/
+https://github.com/libyal/libfcache/
 .Sh AUTHOR
 These man pages were written by Joachim Metz.
 .Sh COPYRIGHT
