@@ -1,6 +1,9 @@
 TODO
 * add tests
 
+20140920
+* changes for project site move
+
 20140912
 * added clear cache entry functionality
 
